# RoadGenerator

./: .gitignore  CMakeLists.txt  main.cpp  placeholderTests.cpp  placeholderTests.h
include/types/: Coord.h  DirectionEnum.h  RoadElement.h  RoadGrid.h  RoadTile.h
src/constants/: Directions.h  RoadElements.h
src/exceptions/: InvalidNonEmptyAssumption.h  OutOfBoundsException.h  TileAlreadyFilledElement.h
src/types/: Coord.cpp  DirectionEnum.cpp  RoadGrid.cpp
src/utils/: EnumRange.h  SetUtils.h
